feat(analytics): add test data seed script for endpoint verification
Provides an idempotent Postgres fixture with predictable results for all seven
analytics endpoints, plus optional curl examples when the backend is running.

Co-authored-by: Cursor <cursoragent@cursor.com>